@@ -1,6 +1,8 @@
 package BackEndUtilities;
 
+import Constants.Constants;
 import Interfaces.IMeasure;
+import Managers.MeasureManager;
 import Settings.UserSettings;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.logging.log4j.LogManager;
@@ -21,15 +23,11 @@ import java.util.List;
 
 public class DynamicJavaClassLoader {
     private static final Logger logger = LogManager.getLogger(DynamicJavaClassLoader.class);
-    private static File templateFile;
     /**
      * It reads all the .java files in the UDM folder, writes them to the CustomMeasures folder, compiles them, and then
      * loads them into the program
      */
     public static void init(){
-        templateFile = new File(UserSettings.getWorkingDirectory() + "/" + Constants.UDM_FOLDER + "/TEMPLATE.java");
-        if(!templateFile.exists())
-            generateTemplate();
         File[] files = new File(UserSettings.getWorkingDirectory() + "/" + Constants.UDM_FOLDER).listFiles();
         //If this pathname does not denote a directory, then listFiles() returns null.
         if (files == null) {
@@ -47,6 +45,10 @@ public class DynamicJavaClassLoader {
                 try {
                     logger.debug(FilenameUtils.getBaseName(file.getName()) + ": Trying to load.");
                     String content = Files.readString(file.toPath(), Charset.defaultCharset());
+                    if(!content.startsWith("package CustomMeasures")) {
+                        logger.error(FilenameUtils.getBaseName(file.getName())+ ": Custom Measure isn't in package CustomMeasure");
+                        return;
+                    }
 
                     File javaFile = new File("CustomMeasures/" + FilenameUtils.getBaseName(file.getName()) + ".java");
                     File classFile = new File("CustomMeasures/" + FilenameUtils.getBaseName(file.getName()) + ".class");
@@ -144,21 +146,20 @@ public class DynamicJavaClassLoader {
         }
     }
 
-    private static void generateTemplate() {
+    public static void generateTemplate(String className, String requiredVariables, String isGraphable, String selectedGraphs, String cardType, String numberSamples, String returnType) {
         String template = """
                 package CustomMeasures;
                                 
                 import BackEndUtilities.DataSet;
                 import BackEndUtilities.Expressions;
-                import BackEndUtilities.MeasureConstants;
+                import Constants.MeasureConstants;
                 import BackEndUtilities.Sample;
-                import FrontEndUtilities.ErrorManager;
-                import GUI.CardTypes;
-                import Graphing.DataFormat;
-                import Graphing.GraphTypes;
+                import Managers.ErrorManager;
+                import Enums.CardTypes;
+                import Enums.DataFormat;
+                import Enums.GraphTypes;
                 import Interfaces.IMeasure;
                 import Interfaces.IValidator;
-                import org.apache.commons.math3.distribution.BinomialDistribution;
                                 
                 import java.util.ArrayList;
                 import java.util.Arrays;
@@ -184,25 +185,25 @@ public class DynamicJavaClassLoader {
                     BLANK
                  */
                                 
-                public class TEMPLATE implements IMeasure {
+                public class %s implements IMeasure {
                                 
                     private DataSet inputData;
-                    private final String name = "TEMPLATE";
-                    private final int minimumSamples = 1;
-                    private final List<String> requiredVariables = Arrays.asList();
-                    private final boolean isGraphable = true;
-                    private final List<GraphTypes> validGraphs = List.of(GraphTypes.NONE);
-                    private final CardTypes cardType = CardTypes.BLANK;
+                    private final String name = "%s";
+                    private final int minimumSamples = %s;
+                    private final List<String> requiredVariables = Arrays.asList(%s);
+                    private final boolean isGraphable = %s;
+                    private final List<GraphTypes> validGraphs = List.of(%s);
+                    private final CardTypes cardType = %s;
                                 
                     public boolean isGraphable(){ return this.isGraphable; }
                                 
                     public List<GraphTypes> getValidGraphs(){ return this.validGraphs; }
                                 
-                    public TEMPLATE() {
+                    public %s() {
                         this.inputData = new DataSet();
                     }
                                 
-                    public TEMPLATE(DataSet inputData) {
+                    public %s(DataSet inputData) {
                         this.inputData = inputData;
                     }
                                 
@@ -265,7 +266,7 @@ public class DynamicJavaClassLoader {
                     // Change the return type, add functionality, return the results
                                 
                     @Override
-                    public Object run() {
+                    public %s run() {
                                 
                         // Don't touch
                         logger.debug("Running " + this.name);
@@ -293,18 +294,24 @@ public class DynamicJavaClassLoader {
                         int n = Integer.parseInt(Expressions.getArgument("n"));
                                 
                         double p = Double.parseDouble(Expressions.getArgument("p"));
+                        
+                        Remember:
+                        You listed %s
+                        as required variables so
+                        make sure you use them!
                                 
                         */
                                 
                         // Add functionality below here
                        
-                        List<Double> result = new ArrayList<>();
+                        %s result;
                                 
-                        return result;
+                        return null;
                     }
                 }
                                 
-                """;
+                """.formatted(className,className,numberSamples,requiredVariables,isGraphable,selectedGraphs,cardType,className,className,returnType,requiredVariables,returnType);
+        File templateFile = new File(UserSettings.getWorkingDirectory() + "/" + Constants.UDM_FOLDER + "/"+ className +".java");
         try {
             FileWriter fw = new FileWriter(templateFile);
             fw.write(template);
